# defender

./: .clang-format  .clang-tidy  .gitignore  404.html  ARCHITECTURE.md  CMakeLists.txt  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: ci.yml  docs.yml  release-drafter.yml  release.yml
architecture/: index.html
ci-cd/: index.html
code-style/: index.html
docs/: architecture.md  ci-cd.md  code-style.md  getting-started.md  index.md
getting-started/: index.html
search/: search_index.json
src/: CMakeLists.txt  defender_lib.cpp  main.cpp
tests/: CMakeLists.txt  test_smoke.cpp
